--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ function updateChart(monthIndex) {
 
   const colors = filteredValues.map(v => {
     if (v >= 100) return "green";
-    if (v >= 90) return "gold";
+    if (v >= 90) return "orange";
     return "red";
   });
 
